# ha-stiebel-control

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  MQTT_AUTO_DISCOVERY.md  Makefile  README.md  REFACTORING_SUMMARY.md  SG_READY.md  dashboard.yaml  genai_prompt_translation.txt  german_to_english.json  heatingpump.yaml  heatingpump_en.yaml  heatingpump_en_prod.yaml  migrate_elster_table.py
.claude/: settings.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
archive/: README.md  dashboard.yaml
archive/stiebeltools/: ElsterTable.h  KElsterTable.h  NUtils.h  heatingpump.h
docs/: AGENTIC_DEVELOPMENT.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  INSTALLATION.md
esphome/: ci_heatingpump_s2.yaml  ci_heatingpump_s3.yaml  ci_secrets.yaml  common.yaml  ha-stiebel-control.h  heatingpump.yaml  secrets.yaml.example  secrets.yaml.template  wifi.yaml  wpl13e.yaml
esphome/elster/: ElsterTable.h  KElsterTable.cpp  NTypes.h  NUtils.h
esphome/ha-stiebel-control/: board_esp32s2.yaml  board_esp32s3.yaml  can_esp32.yaml  can_mcp2515.yaml  common.yaml  config.h  ha-dummy.cpp  (+17 more)
helperscripts/: ai_refine_friendly_names.py  expand_signal_names.py  format_elster_table.py  refine_friendly_names.py
src/: main.rs
stiebeltools/: ElsterTable.h  KElsterTable.cpp  NTypes.h  NUtils.cpp  heatingpump.h
tests/: esphome_stubs.h  main.cpp  signal_requests_stub.cpp  test_can_logic.cpp  test_kelster.cpp  test_mqtt_smoke.py  test_nutils.cpp  test_sg_ready.cpp
(+12 files in other folders)
