[package]
name = "ha-stiebel-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.109"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_yaml = "0.9.29"
serde = { version = "1.0.193", features = ["derive"] }
clap = "4.4.12"
